# todo

./: .gitignore  FUTURE.md  docker-compose.local.yml  docker-compose.yml  index.html  launch.sh  package-lock.json  package.json  tsconfig.json
.github/workflows/: docker.yml
docs/plans/: 2026-04-29-nas-sync-design.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  config.rs  db.rs  lib.rs  main.rs  models.rs  sync.rs
src/components/: Settings.svelte  Setup.svelte  Sidebar.svelte  TodoList.svelte
src/lib/: api.ts  types.ts
todo-server/: Cargo.toml  Dockerfile
todo-server/src/: auth.rs  db.rs  main.rs  models.rs  routes.rs
